# POO-Agenda

./: .gitignore  CMakeLists.txt  Calendar.h  Event.h  GuiView.h  IController.h  IView.h  Persistence.h  README.md  README_DESIGN.md  RecurrenceRule.h  User.h
Design/: Calendar.h  Event.h  GuiView.h  IController.h  IView.h  Persistence.h  README_DESIGN.md  RecurrenceRule.h  User.h
src/: main.cpp
src/controller/: Controller.cpp  Controller.h  IController.h
src/model/: Calendar.cpp  Calendar.h  Event.cpp  Event.h  RecurrenceRule.h  RecurrenceRuleDaily.cpp  RecurrenceRuleDaily.h  User.cpp  User.h
src/persistence/: IPersistence.h  JSONPersistence.cpp  JSONPersistence.h
src/utils/: TimeUtils.cpp  TimeUtils.h  UtilTemplates.cpp  UtilTemplates.h
src/view/: ConsoleView.cpp  ConsoleView.h  GUIView.cpp  GuiView.h  IView.h
